fix: remove unused translations [CDS]
Signed-off-by: CDS <cds@ovh.net>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_en_GB.json
@@ -144,12 +144,13 @@
   "pack_move_domain_additional_text": "/domain name",
   "pack_move_gtr_title": "GRT - Guaranteed Recovery Time (if eligible)",
   "pack_move_gtr_available": "OVHcloud GRT available",
-  "pack_move_gtr_4ho_available": "GTR 4HO available",
-  "pack_move_gtr_10ho_available": "GTR 10HO available",
-  "pack_move_gtr_5m_4ho_available": "GTR 4HO &amp; COMFORT 5M OPTION available",
-  "pack_move_gtr_5m_10ho_available": "GTR 10HO &amp; COMFORT 5M OPTION available",
-  "pack_move_gtr_20m_4ho_available": "GTR 4HO &amp; COMFORT 20M OPTION available",
-  "pack_move_gtr_20m_10ho_available": "GTR 10HO &amp; COMFORT 20M OPTION available",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} ex. VAT/month)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} ex. VAT/month)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
+  "pack_move_no_gtr": "No GRT",
   "pack_move_gtr_add": "Add this GRT",
   "pack_move_offer_choice": "Choose plan",
   "pack_move_offer_choice_error_loading": "Oops! We are unable to load the plans available for your pack.",
@@ -257,6 +258,9 @@
   "pack_move_meeting_description": "The plan you have selected will not require intervention from a technician.",
   "pack_move_unbundling_title": "Select the plan type",
   "pack_move_resume_first_year_promo": "Reduced price for the first year",
+  "pack_move_resume_comfort_activation": "The Comfort option activation fee is {{ price }} ex. VAT.",
+  "pack_move_resume_install_fees": "Setup fees are {{ price }} ex. VAT.",
+  "pack_move_resume_creation_line_fees": "Line creation costs are {{ price }} ex. VAT.",
   "pack_move_contract_action": "The {{typeOffer}} <strong>{{ lineNumber }}</strong> line will be activated.",
   "pack_move_contract_action_create": "A new line will be created at the address:",
   "pack_move_contract_meeting_contact": "I will be contacted by a technician to agree on a time slot.",
@@ -272,24 +276,12 @@
   "pack_move_promotion_subscription_months_offered": "{{ duration }} months included",
   "pack_move_promotion_installation_fees_offered": "Setup fees included",
   "pack_move_resume_promotion": "The setup fees and the first {{ duration }} months of your new subscription are included (excluding modem rental, additional options and transportation).",
-  "pack_move_resume_comfort_activation": "The Comfort option activation fee is {{ price }} ex. VAT.",
-  "pack_move_resume_install_fees": "Setup fees are {{ price }} ex. VAT.",
-  "pack_move_resume_creation_line_fees": "Line creation costs are {{ price }} ex. VAT.",
   "pack_move_modem_yes": "I want to use a new modem ({{ price }} ex. VAT/month)",
   "pack_move_modem_recycled": "I want to use a recycled modem ({{ price }} ex. VAT/month)",
   "pack_move_modem_no": "I do not want a modem",
-  "pack_move_modem_required": "You must select a modem type",
-  "pack_move_confirm_modem_rental_yes": "New modem rental",
-  "pack_move_confirm_modem_rental_recycled": "Location modem recycled",
-  "pack_move_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
-  "pack_move_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility.",
   "pack_move_modem_keep": "I want to keep my modem ({{ price }} ex. VAT/month)",
+  "pack_move_modem_required": "You must select a modem type",
   "pack_move_confirm_modem_rental": "Modem location",
-  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} ex. VAT/month)",
-  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} ex. VAT/month)",
-  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
-  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; COMFORT 5M OPTION ({{ price }} ex. VAT/month)",
-  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
-  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; COMFORT 20M OPTION ({{ price }} ex. VAT/month)",
-  "pack_move_no_gtr": "No GRT"
+  "pack_move_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
+  "pack_move_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility."
 }
