--- a/packages/manager/modules/hub/src/components/products/translations/Messages_en_GB.json
+++ b/packages/manager/modules/hub/src/components/products/translations/Messages_en_GB.json
@@ -1,6 +1,5 @@
 {
   "manager_hub_products_ALL_DOM": "AllDom Pack",
-  "manager_hub_products_DEDICATED_ANTHOS_TENANTS": "Anthos Platform",
   "manager_hub_products_CDN_DEDICATED": "CDN",
   "manager_hub_products_CLOUD_PROJECT": "PCI projects",
   "manager_hub_products_CLOUD_DB_ENTERPRISE_CLUSTER": "Enterprise Cloud Database",
@@ -16,6 +15,7 @@
   "manager_hub_products_DOMAIN": "Domain names",
   "manager_hub_products_DOMAIN_ZONE": "DNS zones",
   "manager_hub_products_EMAIL_DOMAIN": "Emails",
+  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_EXCHANGE_SERVICE": "Microsoft Exchange",
   "manager_hub_products_EMAIL_PRO": "Professional emails",
   "manager_hub_products_EXCHANGE": "Microsoft Exchange",
@@ -49,6 +49,7 @@
   "manager_hub_products_MS_SERVICES_SHAREPOINT": "Microsoft SharePoint",
   "manager_hub_products_STORAGE_NETAPP": "Enterprise File Storage",
   "manager_hub_products_NUTANIX": "Nutanix",
+  "manager_hub_products_NETAPP": "NetApp",
   "manager_hub_products_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "manager_hub_products_OVER_THE_BOX": "OverTheBox",
   "manager_hub_products_PACK_XDSL": "xDSL packs",
@@ -64,7 +65,5 @@
   "manager_hub_products_WEB_PAA_S_SUBSCRIPTION": "Web PaaS",
   "manager_hub_products_see_less": "See less services",
   "manager_hub_products_see_more": "See all products and services",
-  "manager_hub_products_see_all": "See all",
-  "manager_hub_products_NETAPP": "NetApp",
-  "manager_hub_products_EMAIL_EXCHANGE": "Microsoft Exchange"
+  "manager_hub_products_see_all": "See all"
 }
