--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-resources/translations/Messages_pl_PL.json
@@ -1,24 +1,24 @@
 {
   "pci_app_add_resources_usecase": "Przykłady zastosowania",
   "pci_app_add_resources_usecase_item_cpu": "Wdrożenie standardowe (zasoby CPU)",
+  "pci_app_add_resources_usecase_item_cpu_description": "Doskonała relacja jakości do ceny dla inferencji modeli machine learning. Mniej kosztowne, ale nadal bardzo wydajne rozwiązanie, jeśli model zawiera ograniczoną liczbę parametrów, z bardzo szybkim skalowaniem. Możliwość wyboru do 12 CPU i 10 replik zapewniających wysoką dostępność.",
   "pci_app_add_resources_usecase_item_gpu": "Inferencja o wysokiej wydajności (zasoby GPU)",
+  "pci_app_add_resources_usecase_item_gpu_description": "Większa wydajność dla inferencji dużych modeli machine learning, w szczególności modeli deep learning zawierających dużą liczbę parametrów. Możliwość wyboru do 4 GPU i 10 replik zapewniających wysoką dostępność.",
   "pci_app_add_resources_proposed_title": "Oferowane gamy zasobów",
+  "pci_app_add_resources_proposed_cpu_description": "Model: {{resourceDescription}}",
   "pci_app_add_resources_proposed_ram": "RAM: {{ram}}",
+  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
+  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
   "pci_app_add_resources_proposed_storage": "Lokalna przestrzeń dyskowa: {{memory}} SSD",
-  "pci_app_add_resources_proposed_bandwidth": "{{ bandwidth }}/s",
+  "pci_app_add_resources_proposed_bandwidth_public": "Sieć publiczna: {{bandwidth}}/s",
+  "pci_app_add_resources_proposed_bandwidth_private": "Sieć prywatna: {{bandwidth}}/s",
   "pci_app_add_resources_proposed_resource_price_by_resource": "netto / godzina",
-  "pci_app_add_resources_proposed_type_gpu": "(GPU)",
   "pci_app_add_resources_proposed_type_gpu_description": "Dostępne instancje GPU",
-  "pci_app_add_resources_proposed_type_cpu": "(CPU)",
   "pci_app_add_resources_proposed_type_cpu_description": "Dostępne instancje CPU",
-  "pci_app_add_resources_number_of_resources": "Zasoby per replika",
-  "pci_app_add_resources_number_of_resources_description": "Zasoby CPU/GPU",
-  "pci_app_add_resources_number_of_resources_type_cpu": "Zasoby CPU",
-  "pci_app_add_resources_number_of_resources_type_gpu": "Zasoby GPU",
-  "pci_app_add_resources_number_of_resources_number_of_resource": "Liczba CPU",
   "pci_app_add_resources_scaling": "Skalowanie",
   "pci_app_add_resources_scaling_description": "W zależności od preferencji wybierz strategię wdrażania, która najlepiej pasuje do Twojej aplikacji: wybierz stałą liczbę replik, na których aplikacja zostanie wdrożona lub wskaż minimalną i maksymalną liczbę replik dla wdrożeń. Dzięki temu dynamicznie zoptymalizujesz ich wydajność i dostosujesz do liczby żądań za pomocą opcji Autoscaling.",
   "pci_app_add_resources_scaling_description_link": "Więcej informacji",
+  "pci_app_add_resources_scaling_description_message": "Pamiętaj, że wybrana liczba replik zwielokrotni pobrane zasoby o tę samą liczbę.",
   "pci_app_add_resources_scaling_switch_label": "Strategia",
   "pci_app_add_resources_scaling_switch_label_enabled": "Autoscaling włączony",
   "pci_app_add_resources_scaling_switch_label_disabled": "Autoscaling wyłączony",
@@ -31,16 +31,7 @@
   "pci_app_add_resources_scaling_trigger_threshold": "Próg uruchomienia (%)",
   "pci_app_add_resources_scaling_trigger_threshold_help_text": "Wartość metryki, w procentach.",
   "pci_app_add_resources_scaling_price_warning": "Łączną cenę wdrożenia oblicza się na podstawie minimalnej liczby wybranych replik. Pamiętaj, że koszt ten może wzrosnąć, gdy Autoscaling jest włączony.",
-  "pci_app_add_resources_flavor_count": "Rozmiar repliki",
   "pci_app_add_resources_total": "Całkowita cena wdrożenia",
   "pci_app_add_resources_resource_price": "Cena zasobu",
-  "pci_app_add_resources_partner_price": "Cena licencji",
-  "pci_app_add_resources_usecase_item_cpu_description": "Doskonała relacja jakości do ceny dla inferencji modeli machine learning. Mniej kosztowne, ale nadal bardzo wydajne rozwiązanie, jeśli model zawiera ograniczoną liczbę parametrów, z bardzo szybkim skalowaniem. Możliwość wyboru do 12 CPU i 10 replik zapewniających wysoką dostępność.",
-  "pci_app_add_resources_usecase_item_gpu_description": "Większa wydajność dla inferencji dużych modeli machine learning, w szczególności modeli deep learning zawierających dużą liczbę parametrów. Możliwość wyboru do 4 GPU i 10 replik zapewniających wysoką dostępność.",
-  "pci_app_add_resources_proposed_cpu_description": "Model: {{resourceDescription}}",
-  "pci_app_add_resources_proposed_cores_single": "CPU: {{cores}} vCore",
-  "pci_app_add_resources_proposed_cores": "CPU: {{cores}} vCores",
-  "pci_app_add_resources_proposed_bandwidth_public": "Sieć publiczna: {{bandwidth}}/s",
-  "pci_app_add_resources_proposed_bandwidth_private": "Sieć prywatna: {{bandwidth}}/s",
-  "pci_app_add_resources_scaling_description_message": "Pamiętaj, że wybrana liczba replik zwielokrotni pobrane zasoby o tę samą liczbę."
+  "pci_app_add_resources_partner_price": "Cena licencji"
 }
