--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_de_DE.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Name",
   "pci_projects_project_storages_blocks_region_label": "Standort",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Typ",
   "pci_projects_project_storages_blocks_type_high-speed": "High Speed",
   "pci_projects_project_storages_blocks_type_classic": "Classic",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Bearbeiten",
   "pci_projects_project_storages_blocks_instance_detach_label": "Instanz trennen",
   "pci_projects_project_storages_blocks_instance_attach_label": "Mit Instanz verbinden",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Snapshot erstellen",
+  "pci_projects_project_storages_blocks_create_backup_label": "Backup erstellen",
   "pci_projects_project_storages_blocks_delete_label": "Löschen",
-  "pci_projects_project_storages_blocks_add_label": "Volume erstellen",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Backup erstellen"
+  "pci_projects_project_storages_blocks_add_label": "Volume erstellen"
 }
