--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_en_GB.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Name",
   "pci_projects_project_storages_blocks_region_label": "Region",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Type",
   "pci_projects_project_storages_blocks_type_high-speed": "High performance",
   "pci_projects_project_storages_blocks_type_classic": "Standard",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Edit",
   "pci_projects_project_storages_blocks_instance_detach_label": "Detach from instance",
   "pci_projects_project_storages_blocks_instance_attach_label": "Attach to instance",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Create a snapshot",
+  "pci_projects_project_storages_blocks_create_backup_label": "Create a backup ",
   "pci_projects_project_storages_blocks_delete_label": "Delete",
-  "pci_projects_project_storages_blocks_add_label": "Create a volume ",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Create a backup "
+  "pci_projects_project_storages_blocks_add_label": "Create a volume "
 }
