--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_es_ES.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Nombre",
   "pci_projects_project_storages_blocks_region_label": "Localización",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Tipo",
   "pci_projects_project_storages_blocks_type_high-speed": "Alto rendimiento",
   "pci_projects_project_storages_blocks_type_classic": "Convencional",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Editar",
   "pci_projects_project_storages_blocks_instance_detach_label": "Desvincular de la instancia",
   "pci_projects_project_storages_blocks_instance_attach_label": "Asociar a la instancia",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Crear un snapshot",
+  "pci_projects_project_storages_blocks_create_backup_label": "Crear una copia de seguridad",
   "pci_projects_project_storages_blocks_delete_label": "Eliminar",
-  "pci_projects_project_storages_blocks_add_label": "Crear un volumen",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Crear una copia de seguridad"
+  "pci_projects_project_storages_blocks_add_label": "Crear un volumen"
 }
