--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_it_IT.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Nome",
   "pci_projects_project_storages_blocks_region_label": "Localizzazione",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Tipo",
   "pci_projects_project_storages_blocks_type_high-speed": "High performance",
   "pci_projects_project_storages_blocks_type_classic": "Classico",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Modifica",
   "pci_projects_project_storages_blocks_instance_detach_label": "Scollega dall’istanza",
   "pci_projects_project_storages_blocks_instance_attach_label": "Associa all’istanza",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Crea uno Snapshot",
+  "pci_projects_project_storages_blocks_create_backup_label": "Crea un backup",
   "pci_projects_project_storages_blocks_delete_label": "Elimina",
-  "pci_projects_project_storages_blocks_add_label": "Crea un volume",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Crea un backup"
+  "pci_projects_project_storages_blocks_add_label": "Crea un volume"
 }
