--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pl_PL.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Nazwa",
   "pci_projects_project_storages_blocks_region_label": "Lokalizacja",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Typ",
   "pci_projects_project_storages_blocks_type_high-speed": "Wysoka wydajność",
   "pci_projects_project_storages_blocks_type_classic": "Klasyczny",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Edytuj",
   "pci_projects_project_storages_blocks_instance_detach_label": "Odłącz od instancji",
   "pci_projects_project_storages_blocks_instance_attach_label": "Podłącz do instancji",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Utwórz snapshot",
+  "pci_projects_project_storages_blocks_create_backup_label": "Utwórz kopię zapasową",
   "pci_projects_project_storages_blocks_delete_label": "Usuń",
-  "pci_projects_project_storages_blocks_add_label": "Utwórz wolumen",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Utwórz kopię zapasową"
+  "pci_projects_project_storages_blocks_add_label": "Utwórz wolumen"
 }
