--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pt_PT.json
@@ -2,6 +2,7 @@
   "pci_projects_project_storages_blocks_title": "Block Storage",
   "pci_projects_project_storages_blocks_name_label": "Nome",
   "pci_projects_project_storages_blocks_region_label": "Localização",
+  "pci_projects_project_storages_blocks_id_label": "ID",
   "pci_projects_project_storages_blocks_type_label": "Tipo",
   "pci_projects_project_storages_blocks_type_high-speed": "Alto desempenho",
   "pci_projects_project_storages_blocks_type_classic": "Clássico",
@@ -14,9 +15,7 @@
   "pci_projects_project_storages_blocks_edit_label": "Editar",
   "pci_projects_project_storages_blocks_instance_detach_label": "Desassociar a instância",
   "pci_projects_project_storages_blocks_instance_attach_label": "Associar a instância",
-  "pci_projects_project_storages_blocks_snapshot_create_label": "Criar uma snapshot",
+  "pci_projects_project_storages_blocks_create_backup_label": "Criar uma cópia de segurança",
   "pci_projects_project_storages_blocks_delete_label": "Eliminar",
-  "pci_projects_project_storages_blocks_add_label": "Criar um volume",
-  "pci_projects_project_storages_blocks_id_label": "ID",
-  "pci_projects_project_storages_blocks_create_backup_label": "Criar uma cópia de segurança"
+  "pci_projects_project_storages_blocks_add_label": "Criar um volume"
 }
